src/objects/Project_Log__c.object
<CustomObject>
    <description>Contains the record of risks, issues, lessons, decisions, and actions related to a project, program, or account.</description>
    <fields>
        <fullName>API_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PSA-CLD-IQVIAPSA-639 - API / Product</description>
        <label>API / Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Drug__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Drug__c</referenceTo>
        <relationshipLabel>GRA Metric Issues</relationshipLabel>
        <relationshipName>Project_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PSA-CLD-USNONE - The account (customer) associated with the project log.  Optional.</description>
        <inlineHelpText>The account (customer) associated with the project log.  Optional.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Project Logs</relationshipLabel>
        <relationshipName>Project_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assignee_External__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PSA-CLD-USNONE - An external contact assigned to handle this project log item.</description>
        <inlineHelpText>An external contact assigned to handle this project log item.</inlineHelpText>
        <label>Assignee (External)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Project Logs (Assignee (External))</relationshipLabel>
        <relationshipName>Project_Logs3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assignee_Internal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PSA-CLD-USNONE - The resource assigned to handle this project log item.  Filter Lookup where Contact Record Type = IQVIA User Contact</description>
        <inlineHelpText>The resource assigned to handle this project log item.  Filter Lookup where Contact Record Type = IQVIA User Contact</inlineHelpText>
        <label>Assignee (Internal)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Project Logs (Assignee (Internal))</relationshipLabel>
        <relationshipName>Project_Logs2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Associated_Project_Phase__c</fullName>
        <description>PSA-CLD-USNONE - The project phase associated with this project log item</description>
        <inlineHelpText>The project phase associated with this project log item</inlineHelpText>
        <label>Associated Project Phase</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Planning</fullName>
                </value>
                <value>
                    <fullName>Start-up</fullName>
                </value>
                <value>
                    <fullName>Conduct</fullName>
                </value>
                <value>
                    <fullName>Close-out</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>PSA-CLD-USNONE - The category with which this project log item is associated.</description>
        <inlineHelpText>The category with which this project log item is associated.</inlineHelpText>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Project_Log_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Complexity__c</fullName>
        <description>PSA-CLD-USNONE - The complexity of the project log item</description>
        <inlineHelpText>The complexity of the project log item</inlineHelpText>
        <label>Complexity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Small</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Large</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Countries__c</fullName>
        <description>PSA-CLD-USNONE - The countries associated with this project log item</description>
        <inlineHelpText>The countries associated with this project log item</inlineHelpText>
        <label>Countries</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CountryCode</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Dependency__c</fullName>
        <description>PSA-CLD-IQVIAPSA-639 - GRA Metric Issue Customer Dependency</description>
        <label>Customer Dependency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Added__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>PSA-CLD-USNONE - The date the project log item was added</description>
        <inlineHelpText>The date the project log item was added</inlineHelpText>
        <label>Date Added</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <description>PSA-CLD-USNONE - When the project log item was completed</description>
        <inlineHelpText>When the project log item was completed</inlineHelpText>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Discovered__c</fullName>
        <description>PSA-CLD-IQVIAPSA-639 - Date Discovered</description>
        <label>Date Discovered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Due__c</fullName>
        <description>PSA-CLD-USNONE - When the project log item is due</description>
        <inlineHelpText>When the project log item is due</inlineHelpText>
        <label>Date Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Occurred__c</fullName>
        <description>PSA-CLD-IQVIAPSA-639 - Date Occurred</description>
        <label>Date Occurred</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deliverable__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PSA-CLD-IQVIAPSA-639 - Deliverable</description>
        <label>Deliverable</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>pse__Project_Task__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>RDS Deliverable</value>
            </filterItems>
            <filterItems>
                <field>pse__Project_Task__c.Service_Line__c</field>
                <operation>notEqual</operation>
                <value>PVA</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>pse__Project_Task__c</referenceTo>
        <relationshipLabel>GRA Metric Issues</relationshipLabel>
        <relationshipName>Project_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>PSA-CLD-USNONE - Description of the project log item</description>
        <inlineHelpText>Description of the project log item</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Detailed_Description__c</fullName>
        <description>PSA-CLD-IQVIAPSA-639 - Detailed Description</description>
        <label>Detailed Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Detectability_Rank__c</fullName>
        <description>PSA-CLD-USNONE - Detectability Rank</description>
        <formula>CASE(Detectability__c,
                &quot;.9&quot;, &quot;Very Difficult&quot;,
                &quot;.7&quot;, &quot;Difficult&quot;,
                &quot;.5&quot;, &quot;Medium&quot;,
                &quot;.3&quot;, &quot;Easy&quot;,
                &quot;.1&quot;, &quot;Very Easy&quot;,
                &quot;Undefined&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Detectability Rank</inlineHelpText>
        <label>Detectability Rank</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detectability__c</fullName>
        <description>PSA-CLD-USNONE - What is the extent to which the risk would be detectable?
                Numeric rating of the detectability of the risk: .1 - Very Easy; .3 - Easy; .5 - Medium; .7 - Difficult; .9 - Very Difficult</description>
        <inlineHelpText>What is the extent to which the risk would be detectable?
                Numeric rating of the detectability of the risk: .1 - Very Easy; .3 - Easy; .5 - Medium; .7 - Difficult; .9 - Very Difficult</inlineHelpText>
        <label>Detectability</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>.9</fullName>
                </value>
                <value>
                    <fullName>.7</fullName>
                </value>
                <value>
                    <fullName>.5</fullName>
                </value>
                <value>
                    <fullName>.3</fullName>
                </value>
                <value>
                    <fullName>.1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EDA_Reference_Number__c</fullName>
        <description>IQVIAPSA-633 - Project Log - Add Ranking fields to the &apos;Issue&apos; record</description>
        <label>EDA Reference Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PSA-CLD-USNONE - The functional area associated with the project log.  Optional.</description>
        <inlineHelpText>The functional area associated with the project log.  Optional.</inlineHelpText>
        <label>Group</label>
        <referenceTo>pse__Grp__c</referenceTo>
        <relationshipLabel>Project Logs</relationshipLabel>
        <relationshipName>Project_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>If_Yes_Date_Customer_Notified__c</fullName>
        <description>PSA-CLD-IQVIAPSA-639 Customer Dependency Notification Date</description>
        <label>If Yes, Date Customer Notified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Impact_Description__c</fullName>
        <description>Description of the Issue&apos;s Impact</description>
        <inlineHelpText>Please Enter a Description of the Issue&apos;s Impact</inlineHelpText>
        <label>Impact Description</label>
        <length>600</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Impact_Rank__c</fullName>
        <description>PSA-CLD-USNONE - Impact Rank</description>
        <formula>CASE(Impact__c,
                &quot;.8&quot;, &quot;Very High&quot;,
                &quot;.4&quot;, &quot;High&quot;,
                &quot;.2&quot;, &quot;Medium&quot;,
                &quot;.1&quot;, &quot;Low&quot;,
                &quot;.05&quot;, &quot;Very Low&quot;,
                &quot;Undefined&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Impact Rank</inlineHelpText>
        <label>Impact Rank</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Impact__c</fullName>
        <description>PSA-CLD-USNONE - Would an occurrence of the risk have a significant impact, in relation to regulatory compliance, regulatory authority deadlines, ability to deliver the project according to the agreed scope, SLAs and KPIs, schedule, budget,  quality and timelines?
        Numeric rating of the impact if the risk were to occur: .8 - Very High; .4 - High; .2 - Medium; .1 - Low; .05 - Very Low</description>
        <inlineHelpText>Would occurrence of risk have significant impact, in relation to Reg Compl.,Reg Auth deadlines, delivery of Scope, SLAs, KPIs, schedule, budget, quality?Numeric rating of impact if risk were to occur: .8-Very High; .4-High; .2-Medium; .1-Low; .05-Very Low</inlineHelpText>
        <label>Impact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>.8</fullName>
                </value>
                <value>
                    <fullName>.4</fullName>
                </value>
                <value>
                    <fullName>.2</fullName>
                </value>
                <value>
                    <fullName>.1</fullName>
                </value>
                <value>
                    <fullName>.05</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Include_in_Reporting__c</fullName>
        <defaultValue>true</defaultValue>
        <description>PSA-CLD-USNONE - Include in Reporting</description>
        <inlineHelpText>Include in Reporting</inlineHelpText>
        <label>Include in Reporting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initiator__c</fullName>
        <description>PSA-CLD-IQVIAPSA-639 Created By  User</description>
        <formula>CreatedBy.Full_User_Name__c</formula>
        <label>Initiator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_Severity__c</fullName>
        <description>IQVIAPSA-633 - Project Log - Add Ranking fields to the &apos;Issue&apos; record</description>
        <label>Issue Severity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Minor</fullName>
                </value>
                <value>
                    <fullName>Major</fullName>
                </value>
                <value>
                    <fullName>Critical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issue_Tracked_in_EDA_System__c</fullName>
        <description>IQVIAPSA-633 - Project Log - Add Ranking fields to the &apos;Issue&apos; record</description>
        <label>Issue Tracked in EDA System</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issue_Type__c</fullName>
        <description>PSA-CLD-IQVIAPSA-639 - Issue Type (Performance Miss / Quality Issue</description>
        <label>Issue Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Performance Miss</fullName>
                </value>
                <value>
                    <fullName>Quality Issue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <description>PSA-CLD-USNONE - External ID.  Unique.  Used to identify the ID of this record in its source system (for data migration).</description>
        <externalId>true</externalId>
        <inlineHelpText>External ID.  Unique.  Used to identify the ID of this record in its source system (for data migration).</inlineHelpText>
        <label>Legacy ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PSA-CLD-USNONE - The resource responsible for following up on this project log.  Should be filtered to Contacts where record type = “IQVIA User Contact” or “Project Contact”</description>
        <inlineHelpText>The resource responsible for following up on this project log.  Should be filtered to Contacts where record type = “IQVIA User Contact” or “Project Contact”</inlineHelpText>
        <label>Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Project Logs (Owner)</relationshipLabel>
        <relationshipName>Project_Logs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Project_Log__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PSA-CLD-USNONE - The parent project log item with which this log item is associated.  For example, the risk that spawned this issue.</description>
        <inlineHelpText>The parent project log item with which this log item is associated.  For example, the risk that spawned this issue.</inlineHelpText>
        <label>Parent Project Log</label>
        <referenceTo>Project_Log__c</referenceTo>
        <relationshipLabel>Project Logs</relationshipLabel>
        <relationshipName>Project_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Probability_Rank__c</fullName>
        <description>PSA-CLD-USNONE - Probability Rank</description>
        <formula>CASE(Probability__c,
                &quot;.9&quot;, &quot;Very High&quot;,
                &quot;.7&quot;, &quot;High&quot;,
                &quot;.5&quot;, &quot;Medium&quot;,
                &quot;.3&quot;, &quot;Low&quot;,
                &quot;.1&quot;, &quot;Very Low&quot;,
                &quot;Undefined&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Probability Rank</inlineHelpText>
        <label>Probability Rank</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <description>PSA-CLD-USNONE - What is the probability of the risk occurring?
                Numeric rating of the likelihood of the risk occurring: .9 - Very High; .7 - High; .5 - Medium; .3 - Low; .1 - Very Low</description>
        <inlineHelpText>What is the probability of the risk occurring?
                Numeric rating of the likelihood of the risk occurring: .9 - Very High; .7 - High; .5 - Medium; .3 - Low; .1 - Very Low</inlineHelpText>
        <label>Probability</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>.9</fullName>
                </value>
                <value>
                    <fullName>.7</fullName>
                </value>
                <value>
                    <fullName>.5</fullName>
                </value>
                <value>
                    <fullName>.3</fullName>
                </value>
                <value>
                    <fullName>.1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PSA-CLD-USNONE - The program this associated with this project log item</description>
        <inlineHelpText>The program this associated with this project log item</inlineHelpText>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Project Logs</relationshipLabel>
        <relationshipName>Project_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Metric__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PSA-CLD-IQVIAPSA-639 - Associated Project Metric</description>
        <label>Project Metric</label>
        <referenceTo>Project_Metric__c</referenceTo>
        <relationshipLabel>GRA Metric Issues</relationshipLabel>
        <relationshipName>Project_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PSA-CLD-USNONE - The project associated with the project log.  Optional.</description>
        <inlineHelpText>The project associated with the project log.  Optional.</inlineHelpText>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Project Logs</relationshipLabel>
        <relationshipName>Project_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Projected_Completion_Date__c</fullName>
        <description>PSA-CLD-USNONE - The date that the associated project log item is projected to be completed.</description>
        <inlineHelpText>The date that the associated project log item is projected to be completed.</inlineHelpText>
        <label>Projected Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <description>PSA-CLD-USNONE - Visual reflection of risk rank</description>
        <formula>IF( OR(VALUE(TEXT( Impact__c )) * VALUE(TEXT( Probability__c )) &gt; 0.2, TEXT( Issue_Severity__c) = &quot;Critical&quot;) ,
       IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;red&quot;, 20, 20),
	   IF(
			OR(VALUE(TEXT( Impact__c )) * VALUE(TEXT( Probability__c )) &gt; 0.08, TEXT( Issue_Severity__c) = &quot;Major&quot;) ,
			IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;yellow&quot;, 20, 20),
			
			IF(
				OR(VALUE(TEXT( Impact__c )) * VALUE(TEXT( Probability__c )) &lt;= 0.08, TEXT( Issue_Severity__c) = &quot;Minor&quot;) ,
				IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 20, 20),
				null
			)
		)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Visual reflection of risk rank</inlineHelpText>
        <label>RAG</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Deletion__c</fullName>
        <description>PSA-CLD-USNONE - The reason for deletion of this record.  A reason must be provided in order to delete this record.</description>
        <inlineHelpText>The reason for deletion of this record.  A reason must be provided in order to delete this record.</inlineHelpText>
        <label>Reason for Deletion</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Status_Change__c</fullName>
        <description>PSA-CLD-USNONE - Reason for Status Change</description>
        <inlineHelpText>Reason for Status Change</inlineHelpText>
        <label>Reason for Status Change</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>PSA-CLD-USNONE - The region(s) associated with this project log item</description>
        <inlineHelpText>The region(s) associated with this project log item</inlineHelpText>
        <label>Region</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Regions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resolution_Plan__c</fullName>
        <description>Resolution Plan</description>
        <inlineHelpText>Please Enter a Resolution Plan</inlineHelpText>
        <label>Resolution Plan</label>
        <length>2200</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PSA-CLD-USNONE - The resource associated with the project log.  That is, if a resource is the subject of a risk or issue, it would be noted here.  Optional.</description>
        <inlineHelpText>The resource associated with the project log.  That is, if a resource is the subject of a risk or issue, it would be noted here.  Optional.</inlineHelpText>
        <label>Resource</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Project Logs</relationshipLabel>
        <relationshipName>Project_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Response_Plan__c</fullName>
        <description>PSA-CLD-USNONE - The response plan for this project log item.</description>
        <inlineHelpText>The response plan for this project log item.</inlineHelpText>
        <label>Response Plan</label>
        <length>2200</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Risk_Priority_Number__c</fullName>
        <description>PSA-CLD-USNONE - Impact * Probability * Detectability</description>
        <formula>VALUE (TEXT(Impact__c)) * VALUE(TEXT(Probability__c)) * VALUE(TEXT(Detectability__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Impact * Probability * Detectability</inlineHelpText>
        <label>Risk Priority Number</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Risk_Rank__c</fullName>
        <description>PSA-CLD-USNONE - Impact * Probability, Risk Rank
                &gt;.2, High Risk
                &gt;.08 &amp;&amp; &lt;=.2, Medium Risk
                &lt;=.08, Low Risk</description>
        <formula>IF(
	CONTAINS(RecordType.Name, &quot;Risk&quot;),
	IF(
		VALUE(TEXT( Impact__c )) * VALUE(TEXT( Probability__c )) &gt; 0.2,
		&quot;High Risk&quot;,
		IF(
			VALUE(TEXT( Impact__c )) * VALUE(TEXT( Probability__c )) &gt; 0.08,
			&quot;Medium Risk&quot;,
			IF(
				VALUE(TEXT( Impact__c )) * VALUE(TEXT( Probability__c )) &lt;= 0.08,
				&quot;Low Risk&quot;,
				null
			)			
		)		
	),	
	IF(
		CONTAINS(RecordType.Name, &quot;Issue&quot;), 
		TEXT( Issue_Severity__c), 
		null
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Impact * Probability, Risk Rank
                &gt;.2, High Risk
                &gt;.08 &amp;&amp; &lt;=.2, Medium Risk
                &lt;=.08, Low Risk</inlineHelpText>
        <label>Rank</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Line__c</fullName>
        <description>PSA-CLD-USNONE - The service line(s) with which this project log item is associated.</description>
        <inlineHelpText>The service line(s) with which this project log item is associated.</inlineHelpText>
        <label>Service Line</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Service_Lines</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PSA-CLD-USNONE - The service associated with the project log.  Optional.</description>
        <inlineHelpText>The service associated with the project log.  Optional.</inlineHelpText>
        <label>Service</label>
        <referenceTo>Service__c</referenceTo>
        <relationshipLabel>Project Logs</relationshipLabel>
        <relationshipName>Project_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Show_Customer__c</fullName>
        <defaultValue>true</defaultValue>
        <description>PSA-CLD-USNONE - Show Customer</description>
        <inlineHelpText>Show Customer</inlineHelpText>
        <label>Show Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>PSA-CLD-USNONE - The status of the project log item</description>
        <inlineHelpText>The status of the project log item</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Postponed</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Close and Escalate</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <description>PSA-CLD-IQVIAPSA-639 GRA Metric Issue Summary</description>
        <label>Summary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dispatch date is later than Health Authority deadline</fullName>
                </value>
                <value>
                    <fullName>Submitted date is later than Health Authority deadline</fullName>
                </value>
                <value>
                    <fullName>Dispatch date is later than Planned Dispatch date</fullName>
                </value>
                <value>
                    <fullName>Submitted date is later than Planned submission date</fullName>
                </value>
                <value>
                    <fullName>e-CTD submission readiness is Not met</fullName>
                </value>
                <value>
                    <fullName>e-CTD submission publishing deadline Not met</fullName>
                </value>
                <value>
                    <fullName>First time validation of submission Not met</fullName>
                </value>
                <value>
                    <fullName>Client notification Not within 10 days</fullName>
                </value>
                <value>
                    <fullName>Health Authority question due to IQVIA error</fullName>
                </value>
                <value>
                    <fullName>CCDS dispatch date is later than planned CCDS dispatch date.</fullName>
                </value>
                <value>
                    <fullName>No. of non-critical errors in IQVIA doc = &gt;0</fullName>
                </value>
                <value>
                    <fullName>No. of critical errors in IQVIA doc =&gt;0</fullName>
                </value>
                <value>
                    <fullName>Othe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>PSA-CLD-USNONE - The title of the project log item</description>
        <inlineHelpText>The title of the project log item</inlineHelpText>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trigger_Description__c</fullName>
        <description>PSA-CLD-USNONE - Description of the trigger</description>
        <inlineHelpText>Description of the trigger</inlineHelpText>
        <label>Trigger Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Trigger_Other__c</fullName>
        <description>PSA-CLD-USNONE - Explanation for &quot;Other&quot; Trigger</description>
        <inlineHelpText>Explanation for &quot;Other&quot; Trigger</inlineHelpText>
        <label>Trigger (Other)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trigger__c</fullName>
        <description>PSA-CLD-USNONE - What triggers the project log item</description>
        <inlineHelpText>What triggers the project log item</inlineHelpText>
        <label>Trigger</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Exposure over threshold</fullName>
                </value>
                <value>
                    <fullName>Tasks not completed</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Walls__c</fullName>
        <description>PSA-CLD-USNONE - Walls</description>
        <inlineHelpText>Walls</inlineHelpText>
        <label>Walls</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Wins__c</fullName>
        <description>PSA-CLD-USNONE - Wins</description>
        <inlineHelpText>Wins</inlineHelpText>
        <label>Wins</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Wisdoms__c</fullName>
        <description>PSA-CLD-USNONE - Wisdoms</description>
        <inlineHelpText>Wisdoms</inlineHelpText>
        <label>Wisdoms</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Project Log</label>
    <nameField>
        <displayFormat>PL-{00000000}</displayFormat>
        <label>Project Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Logs</pluralLabel>
    <recordTypes>
        <fullName>Action_GRA</fullName>
        <active>true</active>
        <description>PSA-CLD-USNONE - Project actions (GRA)</description>
        <label>Action - RADDS</label>
    </recordTypes>
</CustomObject>